--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "init-db": "node database/initDb.js"
   },
   "keywords": [],
   "author": "",
@@ -27,3 +28,4 @@
     "nodemon": "^3.1.10"
   }
 }
+
